--- a/config.json
+++ b/config.json
@@ -1,16 +1,16 @@
 {
-   "ip": "127.0.0.1",
-   "port": "25565",
-   "username": "Notch",
-   "password": "123456",
-   "authstring": "123456",
-   "recording": true,
-   "minimal_packets": true,
-   "daytime": 6000,
-   "weather": false,
-   "remove_items": true,
-   "remove_bats": true,
-   "debug_mode": false,
-   "auto_relog": false,
-   "require_op": true
+    "ip": "127.0.0.1",
+    "port": "25565",
+    "username": "SARC",
+    "uuid": "123456789",
+    "authstring": "secret",
+    "recording": false,
+    "minimal_packets": true,
+    "daytime": 6000,
+    "weather": false,
+    "remove_items": true,
+    "remove_bats": true,
+    "debug_mode": false,
+    "auto_relog": false,
+    "require_op": true
 }
